# 3DSelfie

./: 3DSelfie.cpp  CMakeLists.txt  README.md
data/: suzanne_part.blend
src/: 3DSelfie.cpp
src/tools/: ht_icp_check.cpp
src/tools/ht_fast_bilateral_filter_check/: ht_fast_bilateral_filter_check.cpp
src/tools/ht_icp_check/: ht_icp_check.cpp  readme.md
src/tools/ht_normal_check/: ht_normal_check.cpp  readme.md
src/tools/ht_register_all/: ht_register_all.cpp  notes.txt
src/tools/ht_sac_ia_check/: ht_sac_ia_check.cpp
src/tools/ht_voxel_grid_check/: ht_voxel_grid_check.cpp  readme.md
